force-app/main/default/objects/b3o__Shortlist_Link__c/b3o__Shortlist_Link__c.object-meta.xml
<CustomObject>
    <label>Shortlist Link</label>
    <nameField>
        <displayFormat>SHORT-{0}</displayFormat>
        <label>Shortlist Link Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shortlist Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>