force-app/main/default/objects/b3o__Shortlist_Link__c/fields/b3o__Contact__c.field-meta.xml
<CustomField>
    <fullName>b3o__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Shortlist Links</relationshipLabel>
    <relationshipName>Shortlist_Links</relationshipName>
    <type>Lookup</type>
</CustomField>