force-app/main/default/objects/b3o__Shortlist_Link__c/fields/b3o__Shortlist__c.field-meta.xml
<CustomField>
    <fullName>b3o__Shortlist__c</fullName>
    <label>Shortlist</label>
    <referenceTo>b3o__Shortlist__c</referenceTo>
    <relationshipLabel>Shortlist Links</relationshipLabel>
    <relationshipName>Shortlist_Links</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>