force-app/main/default/objects/b3o__Shortlist_Link__c/fields/b3o__Status__c.field-meta.xml
<CustomField>
    <fullName>b3o__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Invited</fullName>
            </value>
            <value>
                <fullName>Invited</fullName>
            </value>
            <value>
                <fullName>Pending Response</fullName>
            </value>
            <value>
                <fullName>Responded</fullName>
            </value>
            <value>
                <fullName>Not Contacted</fullName>
            </value>
            <value>
                <fullName>Contacted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>